✨ feat(app): Add ONGOING class in home

--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;0,1000;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900;1,1000&display=swap");
 @import url("https://fonts.googleapis.com/icon?family=Material+Icons");
 
 @tailwind base;
@@ -6,29 +6,69 @@
 @tailwind utilities;
 
 @layer base {
-    body {
-        font-family: "Nunito", sans-serif;
-    }
+  body {
+    font-family: "Nunito", sans-serif;
+  }
 
-    button {
-        &:disabled {
-            @apply cursor-not-allowed;
-        }
+  button {
+    &:disabled {
+      @apply cursor-not-allowed;
     }
+  }
 
-    svg {
-        @apply shrink-0;
-    }
-}
-
-@layer components {
-    .n-button {
-        @apply bg-[var(--n-color)] #{!important};
-    }
+  svg {
+    @apply shrink-0;
+  }
 }
 
 // Custom
 .flex > svg + span,
 .flex > img + span {
-    @apply leading-none;
+  @apply leading-tight;
+}
+
+// Custom naive-ui
+.n-button {
+  @apply bg-[var(--n-color)] #{!important};
+}
+
+.n-menu-item {
+  @apply mt-1 #{!important};
+
+  &-group-title {
+    @apply text-xs font-bold text-opacity-50 text-gray-900 h-fit mt-4 mb-1 #{!important};
+  }
+
+  &-content--selected {
+    @apply text-emerald-600 font-bold #{!important};
+
+    svg {
+      @apply text-emerald-600 #{!important};
+    }
+  }
+}
+
+// Animation
+.slide-right-enter-active {
+  transition: all 4s ease-out;
+}
+
+.slide-right-leave-active {
+  transition: all 4s cubic-bezier(1, 0.5, 0.8, 1);
+}
+
+.slide-right-enter-from,
+.slide-right-leave-to {
+  transform: translateX(20px);
+  opacity: 0;
+}
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 2s ease;
+}
+
+.fade-enter-from,
+.fade-leave-to {
+  opacity: 0;
 }
